k8s/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 3000
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
